--- a/.gitattributes
+++ b/.gitattributes
@@ -6,3 +6,4 @@
 *.umap filter=lfs diff=lfs merge=lfs -text
 *.ddp filter=lfs diff=lfs merge=lfs -text
 Content/FirstGameInUE5_Source.zip filter=lfs diff=lfs merge=lfs -text
+*.zip filter=lfs diff=lfs merge=lfs -text
