--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,10 +1,19 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/StackOBot/UI/MainMenu/MainMenu.MainMenu
-GameInstanceClass=/Game/StackOBot/Blueprints/Framework/GI_StackOBot.GI_StackOBot_C
 EditorStartupMap=/Game/StackOBot/Maps/MainWorld.MainWorld
-GlobalDefaultGameMode=/Game/StackOBot/Blueprints/Framework/GM_InGame.GM_InGame_C
+LocalMapOptions=
+TransitionMap=None
+bUseSplitscreen=True
+TwoPlayerSplitscreenLayout=Horizontal
+ThreePlayerSplitscreenLayout=FavorTop
+FourPlayerSplitscreenLayout=Grid
+bOffsetPlayerGamepadIds=False
+GameInstanceClass=/Game/StackOBot/Blueprints/Framework/GI_StackOBot.GI_StackOBot_C
+GameDefaultMap=/Game/StackOBot/UI/MainMenu/MainMenu.MainMenu
+ServerDefaultMap=/Engine/Maps/Entry.Entry
+GlobalDefaultGameMode=/Game/StackOBot/Blueprints/Framework/GM_StayOnTheThing.GM_StayOnTheThing_C
+GlobalDefaultServerGameMode=None
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
 TargetedHardwareClass=Desktop
