WIP: setup two plater controls

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -5,6 +5,8 @@ GameDefaultMap=/Game/JulJam/Maps/PingPong.PingPong
 GameInstanceClass=/Game/StackOBot/Blueprints/Framework/GI_StackOBot.GI_StackOBot_C
 EditorStartupMap=/Game/JulJam/Maps/PingPong.PingPong
 GlobalDefaultGameMode=/Game/JulJam/MarbleGameMode.MarbleGameMode_C
+bUseSplitscreen=True
+bOffsetPlayerGamepadIds=True
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
 TargetedHardwareClass=Desktop
