Add water plugin to project

--- a/JulJam.uproject
+++ b/JulJam.uproject
@@ -139,6 +139,10 @@
 		{
 			"Name": "MultiUserClient",
 			"Enabled": true
+		},
+		{
+			"Name": "Water",
+			"Enabled": true
 		}
 	],
 	"EpicSampleNameHash": "255728979"
